--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body{
+    font-family: "Poppins", serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,7 +61,7 @@ body{
     color: white;
     user-select: none;
     cursor: pointer;
-    font-weight: 400;
+    font-weight: 600;
     border-radius: 10px;
 }
 .Calculator span::before{
